@ sandstorm now boost rock type pokemon special defense by 50%
@ light orb also boost raichu special attack
  replaced frozen status with frostbite from Pokemon Legends Arceus
@ lowered required friendship for evo to 200
@ changed item ratios to be 50% holding first item and 10% holding second item(60% chance of holding a item overall)
  trainer pokemons have max friendship
@ lowercase pokemon names
@ fixed the Leaders heads in the trainer card
@ added third trainer card page for kanto badges
@ berry trees give 3 to 5 berries
@ kurt instantly makes acorn pokeballs
@ reworked remach system for better by removing the previus remach requirement for the battles and always trying to give the trainer phone number to the player
@ reworked initialization system
@ reworked swarm system
@ reworked beat up
@ headbutt works on kanto
  allow more trainer parties, with individual DVs, stat experience, nicknames, variable teams, etc
  added a lot of tms and distributed them acordly
  overworld actions no longer need hm on pokemon, but instead they just need a special item and some special confition(a "flying" mon for fly and so on)
@ no more trade evolutions, all are changed to something else but no "evolve at level x"
@ move dependent evolution, some pokemon need to learn certain moves to evolve
@ held item depent evolution, some pokemon need to hold certain items to evolve
  removed dragon scale
@ your starter holds a item relevant to it's final evolution each 
@ infinite tm uses
@ the gs ball event can be activated by beating red and entering goldenrod pokemon center upstairs while suicune is on the party
  reworked tree encounter caracterization
@ removed artificial save delay
  added hail as a new wheather
  hail raises ice type pokemon defence by 50%
  all 251 pokemon are obtainable
-- tm/hm system rework --
Tm are infinitly usable and more plentyfull, but way less pokemon learn from them
Hm are hard to get but are good moves learnble for a lot of pokemon
